@@ -1,10 +1,23 @@
 basic local and remote communication
 =========================================
 
-Comparing current working directories
+Execute code in subprocess, communicate through a channel
+---------------------------------------------------------
+
+You can instantiate a subprocess gateway, execute code 
+in it and exchange data dynamically::
+
+    >>> import execnet
+    >>> gw = execnet.makegateway() 
+    >>> channel = gw.remote_exec("channel.send(channel.receive()+1)")
+    >>> channel.send(1)
+    >>> channel.receive()
+    2
+
+Compare current working directories
 ----------------------------------------
 
-A local popen gateway has the same working directory as the instantiatior::
+A local subprocess gateway has the same working directory as the instantiatior::
 
     >>> import execnet, os
     >>> gw = execnet.makegateway()   
@@ -14,7 +27,7 @@ A local popen gateway has the same working directory as the instantiatior::
 
 "ssh" gateways default to the login home directory.
 
-Getting information from remote ssh account
+Get information from remote ssh account
 --------------------------------------------
 
 Use simple execution to obtain information from remote environments::
@@ -31,6 +44,43 @@ Use simple execution to obtain information from remote environments::
   >>> version_info
   (2, 4, 2, 'final', 0)
 
+Use a callback instead of receive() and wait for completion 
+-------------------------------------------------------------
+
+Set a channel callback to immediately react on incoming data::
+
+    >>> import execnet
+    >>> gw = execnet.makegateway() 
+    >>> channel = gw.remote_exec("for i in range(10): channel.send(i)")
+    >>> l = []
+    >>> channel.setcallback(l.append, endmarker=None)
+    >>> channel.waitclose() # waits for closing, i.e. remote exec finish
+    >>> l
+    [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, None]
+
+Note that the callback function will execute in the receiver thread
+so it should not block on IO or long to execute. 
+
+Sending channels over channels 
+------------------------------------------------------
+
+You can create and transfer a channel over an existing channel
+and use it to transfer information::
+
+    >>> import execnet
+    >>> gw = execnet.makegateway()
+    >>> channel = gw.remote_exec("""
+    ...        ch1, ch2 = channel.receive()
+    ...        ch2.send("world") 
+    ...        ch1.send("hello")
+    ... """)
+    >>> c1 = gw.newchannel()    # create new channel
+    >>> c2 = gw.newchannel()    # create another channel
+    >>> channel.send((c1, c2))  # send them over
+    >>> c1.receive()
+    'hello'
+    >>> c2.receive()
+    'world'
 
 Avoid "inlined" source strings with remote_exec
 --------------------------------------------------------------
