@@ -1,6 +1,10 @@
 1.x (pending)
 --------------------------------
 
+- generalize channel-over-channel sending: you can now have channels 
+  anywhere in a data structure (i.e. as an item of a container type).
+  Add according examples.
+
 - internally split socket gateways, speeds up popen-gateways
   by 10% (now at 30 milliseconds per-gateway on my 3-year old machine) 
 
